2008-07-24  Cosimo Cecchi  <cosimoc@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=544538

	* app-shell.c: (generate_launchers):
	Fix a build warning.

==================== 0.9.10 ====================

2008-05-13  Federico Mena Quintero  <federico@novell.com>

	* application-tile.c (application_tile_setup): Ensure that name
	and desc are non-NULL before comparing them.

2008-05-09  Magnus Boman  <captain.magnus@gmail.com>

        https://bugzilla.novell.com/show_bug.cgi?id=224885 -
        Don't display both generic name and description if they are the same.

        * libslab/application-tile.c (application_tile_setup): Set subheader
        to NULL if description is the same as generic name.

2008-04-28  Scott Reeves  <sreeves@novell.com>

	* bookmark-agent.c:
	Fix for BNC#308998 - missing translation in menu

2008-04-23  Federico Mena Quintero  <federico@novell.com>

	* libslab-utils.c (create_thumbnail_factory): Continue the fix for
	the last bug; when a second instance of the applet gets added, it
	will want to initialize the thumbnail factory again.

2008-04-23  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=380339 - Crash when
	there are two main-menu applets.

	* libslab-utils.c (libslab_thumbnail_factory_preinit): Check if
	the idle handler is already set up, so we don't try to initialize
	the factory twice if there is more than one main-menu applet
	(e.g. for multiple monitors).

2008-04-09  Federico Mena Quintero  <federico@novell.com>

	* bookmark-agent.c (create_doc_item): Don't leak the template
	filename.

2008-04-08  Federico Mena Quintero  <federico@novell.com>

	* bookmark-agent.c (bookmark_agent_remove_item): Free the uris we
	got from the GBookmarkFile.
	(load_xbel_store): Likewise.

2008-04-04  Federico Mena Quintero  <federico@novell.com>

	* libslab-utils.c (libslab_checkpoint_init): New public function;
	initializes a checkpoint file.